--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/search.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/search.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
 
         
             <header>
-                <img src="assets/logo.svg" alt="Logomarca">
+                <img src="./assets/logo.svg" alt="Logomarca">
     
                 <a href="index.html">
                     <span></span>
